--- a/data/UI/mainWindow.ui
+++ b/data/UI/mainWindow.ui
@@ -10,6 +10,12 @@
     <height>620</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>919</width>
+    <height>620</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Editor</string>
   </property>
